--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
     <!-- STYLES -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <!-- SNIPCART -->
+    <link rel="preconnect" href="https://app.snipcart.com" />
+    <link rel="preconnect" href="https://cdn.snipcart.com" />
+    <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.21/default/snipcart.css" />
 
     <title>Le Flour de Cousine</title>
   </head>
@@ -43,5 +47,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- SNIPCART -->
+    <div id="snipcart" data-api-key="YTU3MDNlZDMtODI3NC00Yjc0LTgwMjktN2MzZjcyNjVmYzc1NjM3NDE2MDczODU5MzYxOTI4" hidden></div>
+    <script async src="https://cdn.snipcart.com/themes/v3.0.25/default/snipcart.js"></script>
   </body>
 </html>
